use window.BudoQuest object instead

--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
       <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
     <![endif]-->
 
+  <script crossorigin type="text/javascript" src="https://unpkg.com/babel-standalone@6.26.0/babel.min.js"></script>
   <script crossorigin type="text/javascript" src="https://unpkg.com/react@16/umd/react.production.min.js"></script>
   <script crossorigin type="text/javascript" src="https://unpkg.com/react-dom@16/umd/react-dom.production.min.js"></script>
   <script crossorigin type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/react-router/4.2.0/react-router.min.js"></script>
@@ -34,9 +35,9 @@
   <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
   <script type="text/javascript" src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa"
     crossorigin="anonymous"></script>
-  <script crossorigin type="text/javascript" src="https://unpkg.com/babel-standalone@6.26.0/babel.min.js"></script>
+
   <script type="text/javascript">
-    window.App = {};
+    window.BudoQuest = {};
   </script>
 </head>
 
