switch to local js libs for speed

--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
   <meta name="author" content="Wim Olivier">
   <meta name="description" content="Budo Quest Martial Arts - real Ninja training in Pretoria East">
   <meta name="keywords" content="self defense, self defence, martial arts, martial arts pretoria east, martial arts pretoria, ninja training, ninjutsu, to shin do, to-shin do, ninja pretoria, ninjutsu pretoria, ninja training pretoria, ninja pretoria east, ninjutsu pretoria east, ninja training pretoria east">
@@ -13,11 +12,8 @@
 
   <title>Budoquest Martial Arts - real Ninja training in Pretoria East</title>
 
-  <!-- Bootstrap core CSS -->
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u"
+  <link rel="stylesheet" href="static/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u"
     crossorigin="anonymous">
-
-  <!-- Custom styles for this template -->
   <link href="static/css/custom.css" rel="stylesheet">
 
 
@@ -27,13 +23,13 @@
       <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
     <![endif]-->
 
-  <script crossorigin type="text/javascript" src="https://unpkg.com/babel-standalone@6.26.0/babel.min.js"></script>
-  <script crossorigin type="text/javascript" src="https://unpkg.com/react@16/umd/react.production.min.js"></script>
-  <script crossorigin type="text/javascript" src="https://unpkg.com/react-dom@16/umd/react-dom.production.min.js"></script>
-  <script crossorigin type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/react-router/4.2.0/react-router.min.js"></script>
-  <script crossorigin type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/react-router-dom/4.2.2/react-router-dom.min.js"></script>
-  <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-  <script type="text/javascript" src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa"
+  <script crossorigin type="text/javascript" src="static/libs/babel.min.js"></script>
+  <script crossorigin type="text/javascript" src="static/libs/react.production.min.js"></script>
+  <script crossorigin type="text/javascript" src="static/libs/react-dom.production.min.js"></script>
+  <script crossorigin type="text/javascript" src="static/libs/react-router.min.js"></script>
+  <script crossorigin type="text/javascript" src="static/libs/react-router-dom.min.js"></script>
+  <script type="text/javascript" src="static/libs/jquery.min.js"></script>
+  <script type="text/javascript" src="static/libs/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa"
     crossorigin="anonymous"></script>
 
   <script type="text/javascript">
